# gooroom-session-manager

./: Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  gooroom-session-manager.desktop.in  gooroom-theme-delete-helper  kr.gooroom.SessionManager.policy.in  kr.gooroom.SessionManager.policy.in.in  theme.css
debian/: changelog  control  copyright  rules
po/: POTFILES.in  POTFILES.skip  ko.po
src/: Makefile.am  gooroom-session-manager.c  gooroom-theme-helper.c  gooroom-update-blacklist-helper.c  grac-reload-helper.c  gresource.xml  gs-grab-x11.c  gsm-message-dialog.c  gsm-message-dialog.h  gsm-message-dialog.ui  kill-gooroom-splash.c  panel-glib.c  panel-glib.h
